--- a/Spring_project/build.gradle
+++ b/Spring_project/build.gradle
@@ -25,7 +25,12 @@ dependencies {
     implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
     runtimeOnly 'com.mysql:mysql-connector-j'
     implementation 'org.projectlombok:lombok'
-
+    implementation 'org.springframework.boot:spring-boot-starter-security'
+    implementation 'org.thymeleaf.extras:thymeleaf-extras-springsecurity6'
+    testImplementation 'org.springframework.security:spring-security-test'
+    implementation 'org.springframework.boot:spring-boot-starter-oauth2-client'
+    implementation 'org.springframework.boot:spring-boot-starter-oauth2-resource-server'  // 추가된 의존성
+    implementation 'org.springframework.security:spring-security-oauth2-jose'  // 추가된 의존성
 
 }
 
