--- a/Spring_project/src/main/resources/application.yml
+++ b/Spring_project/src/main/resources/application.yml
@@ -1,8 +1,10 @@
-#spring.application.name=Spring_project
-
-server:
-  port: 8080
 spring:
+  application:
+    name: Spring_project
+  servlet:
+    multipart:
+      max-file-size: 10MB
+      max-request-size: 10MB
   datasource:
     driver-class-name: com.mysql.cj.jdbc.Driver
     url: jdbc:mysql://localhost:3306/movie
